feat: store maintenance documents in DB (bytea) instead of filesystem
- VehicleMaintenanceDocument: add file_data bytea column, make file_path nullable
- VehicleMaintenanceDocumentService: write/read fileData from DB;
  legacy filesystem fallback for old records; set filePath='DB' as placeholder
- VehicleMaintenanceController: download returns byte[] instead of Resource
- application-prod.properties: ddl-auto=update so Railway adds file_data column